@@ -1,6 +1,7 @@
 Version 7.4.4
 - Added some missing libc.a files (thanks to Ada)
-- Improved module constant overrides
+- Fixed parameter checking for varargs function variables
+- Slightly improved module constant overrides; significant issues remain
 
 Version 7.4.3
 - Remove some unused debug strings when debugging is not enabled
